# Python_Uebung

./: Kontostand_Kapselung.py  Notenrechner.py  OOP_Foundation.py  README.md  pyproject.toml
Bankkonto_Projekt/: Bankkonto_.py  Transaktion_Klasse.py
